- Restore selection after track deletion in playlist [3007538] (patch by cy6ergnOm)
- Song properties dialog improved [3002167] (patch by cy6ergnOm)
- Preferences reworked and saved immediately
- Visual improvements
- Removed multiple view
- Option to show/hide advanced player controls (karaoke, normalization)
- Moved navigation views buttons to tool bar instead of tabbed pane
- FIX: Exception during renaming of file name
- FIX: Repository refresh never ends in certain situations [3024433]
- FIX: Selected playlist element not saved when closing application
- FIX: Hotkeys supported for Windows 64 bits (path by Johannes Lerch)
- FIX: Changes to fit progress bar completely at bottom of player controls panel
- FIX: Wrong capitalization for LyricWiki [3020431]
- FIX: Problems changing Look and Feel / Theme [2998976]
- FIX: Avoid workarounds to set maximixed state in Linux
- FIX: Wrong panel ratios when starting app after being maximized [2974062]
- FIX: Wrong song added as favorite in last.fm [3035260]
- FIX: Music length 0:00 with some MP3 files
- FIX: SplitPanes size incorrect after restart [3019779]
- FIX: Skipping songs raises playcount and last.fm count in files with length 0 [3061462]
- FIX: Problem with seek in large files [3151208]
- FIX: Cancel repository load immediately while loading a folder
- FIX: Show only file system elements with path in repository selection dialog
- FIX: Avoid read files in a file system element in repository selection dialog until node is expanded
- FIX: Song length sometimes not read when using MPlayer engine
- FIX: Use enter to change playing song in play list (patch by Michal Pantucek) [3159234]
- FIX: Avoid enter key in filter text field to change current playing song (patch by Michal Pantucek) [3210857]
- FIX: Some look and feels need to repaint progress bar when showing / hiding ticks

aTunes 2.0.1
-------------
- FIX: Some Substance L&F skins were not working
- FIX: Can't sort or shuffle a new created playlist