@@ -12,6 +12,7 @@ aTunes 2.1.0
 - Removed multiple view
 - Option to show/hide advanced player controls (karaoke, normalization)
 - Moved navigation views buttons to tool bar instead of tabbed pane
+- Removed play list controls panel
 - FIX: Exception during renaming of file name
 - FIX: Repository refresh never ends in certain situations [3024433]
 - FIX: Selected playlist element not saved when closing application
